# vessel-performance-ai

./: .gitignore  .gitlab-ci.yml  .python-version  CLAUDE.md  README.md  app.py  cdk.json  eslint.config.js  model_summary.md  package-lock.json  package.json  pyproject.toml  submission.csv  vitest.config.ts
agentcore/: agent.py  frontend-example.js  pyproject.toml  requirements.txt  skill.md  test.html
agentcore/.bedrock_agentcore/ym_genbi_agent/: dependencies.hash
app/: app.vue
conf/: default.conf  dev.conf
dataset/: README.md  maintenance.csv  prediction_model_ready.csv  target_value_normalization.json  test_model_ready.csv  training_metrics.json  vessel.jsonl
dataset-submission/: generate_submission.py
deployment/: agent_auth_stack.py  agent_runtime_stack.py  athena_tool_stack.py  ui_stack.py
doc/: api-zh.md  api.md  api_v2.md  curated-dataset.md  dataset.md  feature-engineering.md  genbi-agent.md  glossary.md  iso-15016.md  iso-19030-conformance.md  iso-19030.md  maintenance-optimization.md  ml-pipeline-zh.md  model_summary.md  poc-requirements.md  proposal-summary.md  proposal.md  schema.md  slide.md  synthetic-dataset-zh.md  synthetic-dataset.md  table-schema-zh.md  table-schema.md  vessel.md  vessel_particulars.md
scripts/: build_model_ready_data.py  engineer_maintenance_features.py  export-requirements.sh  feature_engineering.py  generate-web-env.sh  generate_submission.py  lfe_register.py  merge_prediction_into_vt_fd.py  model_pipeline_utils.py  report-test.js  split_prediction_data.py  train_pipeline.py
submission/: LinearRegression.csv  RandomForest.csv  XGBoost.csv
table/: __init__.py  curated.py  raw.py  real_data.py
(+2854 files in other folders)
